test/ui/test/lowering/named-arguments-unsupported.stderr
error: named arguments are not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:1:21
  |
1 | receiver: Receiver (A = Type) = engender (material = X)
  |                     ^
  |

error: named arguments are not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:1:43
  |
1 | receiver: Receiver (A = Type) = engender (material = X)
  |                                           ^^^^^^^^
  |

error: named arguments are not supported yet
 --> ${TEST_FOLDER}/lowering/named-arguments-unsupported.lushui:5:14
  |
5 |         Tag (named = thing) => void
  |              ^^^^^
  |

error: aborting due to 3 previous errors

